fix : buildspec.yml structured issues

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,10 +6,12 @@ phases:
       - echo Pre-build phase...
       - mvn -version
   build:
-    - echo Build started on `date`
-    - mvn clean package
+    commands:
+      - echo Build started on `date`
+      - mvn clean package
   post_build:
-    - echo Build completed on `date`
+    commands:
+      - echo Build completed on `date`
 artifacts:
   files:
     - target/aws-cicd-app.jar
